// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#batchSet Buffers are always clear of previously buffered changes: two requests, second only sends bar, not foo 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
  Array [
    "/foo/bar/internal/kibana/settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`#batchSet Overwrites previously buffered values with new values for the same key: two requests, foo=d in final 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
  Array [
    "/foo/bar/internal/kibana/settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`#batchSet buffers changes while first request is in progress, sends buffered changes after first request completes: final, includes both requests 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
  Array [
    "/foo/bar/internal/kibana/settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`#batchSet rejects all promises for batched requests that fail: promise rejections 1`] = `
Array [
  Object {
    "error": [Error: invalid],
    "isRejected": true,
  },
  Object {
    "error": [Error: invalid],
    "isRejected": true,
  },
  Object {
    "error": [Error: invalid],
    "isRejected": true,
  },
]
`;

exports[`#batchSet rejects on 301 1`] = `"Moved Permanently"`;

exports[`#batchSet rejects on 404 response 1`] = `"Request failed with status code: 404"`;

exports[`#batchSet rejects on 500 1`] = `"Request failed with status code: 500"`;

exports[`#batchSet sends a single change immediately: single change 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`#batchSetGlobal Buffers are always clear of previously buffered changes: two requests, second only sends bar, not foo 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/global_settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
  Array [
    "/foo/bar/internal/kibana/global_settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`#batchSetGlobal Overwrites previously buffered values with new values for the same key: two requests, foo=d in final 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/global_settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
  Array [
    "/foo/bar/internal/kibana/global_settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`#batchSetGlobal buffers changes while first request is in progress, sends buffered changes after first request completes: final, includes both requests 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/global_settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
  Array [
    "/foo/bar/internal/kibana/global_settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`#batchSetGlobal rejects all promises for batched requests that fail: promise rejections 1`] = `
Array [
  Object {
    "error": [Error: invalid],
    "isRejected": true,
  },
  Object {
    "error": [Error: invalid],
    "isRejected": true,
  },
  Object {
    "error": [Error: invalid],
    "isRejected": true,
  },
]
`;

exports[`#batchSetGlobal rejects on 301 1`] = `"Moved Permanently"`;

exports[`#batchSetGlobal rejects on 404 response 1`] = `"Request failed with status code: 404"`;

exports[`#batchSetGlobal rejects on 500 1`] = `"Request failed with status code: 500"`;

exports[`#batchSetGlobal sends a single change immediately: single change 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/global_settings",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`#validate rejects on 301 1`] = `"Moved Permanently"`;

exports[`#validate rejects on 404 response 1`] = `"Request failed with status code: 404"`;

exports[`#validate rejects on 500 1`] = `"Request failed with status code: 500"`;

exports[`#validate sends a validation request: validation request 1`] = `
Array [
  Array [
    "/foo/bar/internal/kibana/settings/foo/validate",
    Object {
      "body": Promise {},
      "headers": Object {
        "accept": "application/json",
        "content-type": "application/json",
        "kbn-version": "kibanaVersion",
        "x-elastic-internal-origin": "Kibana",
      },
      "method": "POST",
    },
  ],
]
`;
